added break between comment details and main body

--- a/genUserHome.html
+++ b/genUserHome.html
@@ -86,6 +86,7 @@
                 var commentBodyDiv = $("<div>").addClass("comment-post")
                 var p = $("<p>").addClass("comment")
                 p.append(comment.text)
+                commentBodyDiv.append($("<br>"))
                 commentBodyDiv.append(p)
                 div3.append(commentBodyDiv)
 
