dynamic image loading for comments

--- a/genUserHome.html
+++ b/genUserHome.html
@@ -60,7 +60,7 @@
                 // Profile pic and user name
                 var profileInfoRoot = $("<div>").addClass("col-md-2").addClass("col-sm-2").addClass("hidden-xs");
                 var figure = $("<figure>").addClass("thumbnail");
-                var img = $("<img>").attr("src", "img/oldlady.jpg");
+                var img = $("<img>").attr("src", comment.profile_pic);
                 var figcaption = $("<figcaption>").addClass("text-center")
                 figcaption.append(comment.username)
                 figure.append(img)
